fix: enhance features section display on tablets by fixing spacing issues

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -197,7 +197,7 @@ $gap-phone: 110px;
     object-position: bottom center;
 
     @include respond-to(tablet) {
-      width: 55%;
+      width: 50%;
     }
 
     @include respond-to(phone) {
@@ -209,7 +209,7 @@ $gap-phone: 110px;
   &__slider {
     &-controls {
       position: absolute;
-      top: 410px;
+      top: 450px;
       left: 90px;
 
       @include respond-to(desktop) {
